--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- Main CSS -->
-    <link href="./src/assets/css/main.css" rel="stylesheet"/>
+    <!--    <link href="./src/assets/css/main.css" rel="stylesheet"/>-->
     <!--    jQuery Wookmark Load-->
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
             integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
             async></script>
+    <!--------------------------------------
+JAVASCRIPTS
+--------------------------------------->
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<!--    <script src="./public/js/vendor/jquery.min.js" type="text/javascript"></script>-->
+    <script src="./public/js/vendor/popper.min.js" type="text/javascript"></script>
+    <script src="./public/js/vendor/bootstrap.min.js" type="text/javascript"></script>
     <title>Vite + Vue</title>
 </head>
 <body>
-<!--------------------------------------
-JAVASCRIPTS
---------------------------------------->
-<script src="./src/assets/js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="./src/assets/js/vendor/popper.min.js" type="text/javascript"></script>
-<script src="./src/assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-<script src="./src/assets/js/functions.js" type="text/javascript"></script>
+
 <div id="app"></div>
 <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
