--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
             integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
             async></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/2.2.0/jquery.js" type="text/javascript" charset="utf-8"></script>
     <!--------------------------------------
 JAVASCRIPTS
 --------------------------------------->
@@ -29,7 +30,7 @@ JAVASCRIPTS
 <!--    <script src="./public/js/vendor/jquery.min.js" type="text/javascript"></script>-->
     <script src="./public/js/vendor/popper.min.js" type="text/javascript"></script>
     <script src="./public/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-    <title>Vite + Vue</title>
+    <title>鸟语书斋</title>
 </head>
 <body>
 
